--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,3 @@
+<link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" type="text/css" rel="stylesheet">
+
 <div id="root"></div>
